tests/ui/impl-trait/auto-trait-coherence.next.stderr
error[E0119]: conflicting implementations of trait `AnotherTrait` for type `D<OpaqueType>`
  --> $DIR/auto-trait-coherence.rs:24:1
   |
LL | impl<T: Send> AnotherTrait for T {}
   | -------------------------------- first implementation here
...
LL | impl AnotherTrait for D<OpaqueType> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `D<OpaqueType>`
   |
   = note: upstream crates may add a new impl of trait `std::marker::Send` for type `OpaqueType` in future versions

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
